# tabeb

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 0_quick_start.ipynb
tabeb/: interface.py
tabeb/data/spotify/: spotify_metadata.json
tabeb/data/wine_pl/: wine_pl_metadata.json
tabeb/data/wine_vivino_price/: wine_vivino_price_metadata.json
tabeb/models/: __init__.py  carte_encoder.py  random_encoder.py  skrub_encoder.py
tabeb/tasks/: __init__.py
