[tool.poetry]
name = "tabeb"
version = "0.1.0"
description = ""
authors = ["Duong Nguyen <duong.nguyen@ekimetrics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.0"
carte-ai = "^0.0.23"
huggingface-hub = "^0.26.5"
torch = "^2.5.1"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
fastparquet = "^2024.11.0"
skrub = "^0.4.1"
torch-geometric = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
